# claude-pet

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
hooks/: claude-pet-hook.sh  install-hooks.sh
scripts/: capture-states.mjs  make-tray-icon.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make-icon.py  make-tray-icon.py
src-tauri/src/: lib.rs  main.rs  usage.rs
src-tauri/src/monitor/: hooks.rs  mod.rs  process.rs  session.rs
src/components/: Pet.tsx  StatusPanel.tsx  UsageCard.tsx
src/hooks/: useClaudeState.ts
src/pet/: PixelPet.ts
