[package]
name = "claude-pet"
version = "0.1.2"
description = "A pixel desktop pet that shows Claude Code's live status"
authors = ["Claude Pet"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri loads; main.rs is a thin shim.
[lib]
name = "claude_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
