[package]
name = "claude-pet"
version = "0.1.6"
description = "A pixel desktop pet that shows Claude Code's live status"
authors = ["Claude Pet"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri loads; main.rs is a thin shim.
[lib]
name = "claude_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
# Plan-usage poller: HTTP + decrypting the desktop app's safeStorage token.
# (The AES-128-CBC step shells out to the system `openssl`; we only need the
# pure-Rust PBKDF2-SHA1 key derivation here.)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
